<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fxly.restart.SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/shape_settings"
            >

            <!--设置区域-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/settings_panding"
                android:textSize="@dimen/text_settings_size"
                android:text="@string/total_restart_count"
                />
            <EditText
                android:id="@+id/total_reboot_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/settings_panding"
                android:autoText="true"
                android:text="100"
                android:inputType="numberSigned"

                android:singleLine="true"
                android:maxLength="10"
                android:minLines="1"
                android:backgroundTint="@color/aliceblue"
                android:foregroundGravity="left"
                android:hint="@string/pls_input_count" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_cc"
                >

            </View>
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/control_bar"
                android:gravity="center_vertical"

                android:padding="@dimen/control_bar" >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/settings_panding"
                    android:textSize="@dimen/text_settings_size"
                    android:text="@string/total_restart_count"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/control_bar"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/time_min"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right" >

                        <TextView
                            android:id="@+id/time_hor"
                            android:layout_width="120sp"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical|right"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size" >
                        </TextView>
                    </LinearLayout>
                </LinearLayout>





                <SeekBar
                    android:id="@+id/timeline_hor"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:max="20"

                    android:maxHeight="4.0dip"
                    android:minHeight="4.0dip"
                    android:paddingBottom="@dimen/control_bar"
                    android:paddingLeft="16.0dip"
                    android:paddingRight="16.0dip"
                    android:progress="2"
                    android:progressDrawable="@drawable/controldaytime_custom_seekbar"
                    android:thumb="@drawable/controldaytime_seekbar_thumb" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/shape_settings"
            android:layout_marginTop="@dimen/abc_action_bar_overflow_padding_end_material"
            >
            <!--语言设置-->
            <LinearLayout
                android:id="@+id/settings_language"
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:gravity="center_vertical"
                android:padding="@dimen/layout_vertical_margin_small"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/menu_laguage"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/right_arrow"
                        android:textSize="@dimen/text_size" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_cc"
                >

            </View>
            <!--博客-->
            <LinearLayout
                android:id="@+id/about_us"
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:gravity="center_vertical"
                android:padding="@dimen/layout_vertical_margin_small"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/menu_about"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        />


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/right_arrow"
                        android:textSize="@dimen/text_size" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
